# 100G-verilog-RoCEv2-lite

Scripts/: send_connection_info.py
cpp/: CMakeLists.txt  lfsr_sim.cpp
cpp/src/: lfsr_sim.cpp
example/VCU118/fpga/fpga/: Makefile
example/VCU118/fpga/fpga_10g/: Makefile
example/VCU118/fpga_100g/.Xil/: fpga_propImpl.xdc
example/VCU118/fpga_100g/fpga/: Makefile
example/VCU118/fpga_100g/ip/: cmac_gty_wrapper.v
example/VCU118/fpga_100g/rtl/: fpga.v  fpga_core.v
example/VCU118/fpga_100g/tb/fpga_core/: Makefile.questa  Makefile.vcs  add_wave.do  top_tb.sv
lib/FAST_CRC32/CRC32/: CRC32_D512_matrix.vhd  CRC32_pkg.vhd
lib/FAST_CRC32/Experimental/: CRC32_matrix_pipeline.vhd
lib/Tbps_CRC/core_src/: crc.sv  crc.svh  crc_byteEn.sv
lib/eth/rtl/: lfsr.v
rtl/: RoCE_minimal_stack.sv  RoCE_minimal_stack_512.v  RoCE_tx_header_producer.sv  axis_data_generator.sv  axis_handshake_monitor.vhd
rtl/header_files/: Board_parameters.sv  RoCE_parameters.sv
rtl/utils/: header_stripper.sv
sim/: top_tb.sv
